<resources>
    <string name="app_name">Kitaa</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_button">close button</string>
    <string name="email_address">email address</string>
    <string name="password_hint">password (minimum 8 characters)</string>
    <string name="logo">logo</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname_hint">full name</string>
    <string name="conform_password">conform password</string>

    <!--    Validation Strings-->
    <string name="unmatched_passwords">password doesn\'t match!</string>
    <string name="invalid_email">invalid email!</string>
    <string name="reset_password">Reset Password</string>
    <string name="check_your_email_inbox">* Recovery email sent successfully! Check your inbox.</string>
    <string name="error_internet_connection">Check your internet connection!</string>

    <string name="home_second">Home Second</string>
    <string name="search">search</string>
    <string name="notification">notification</string>

    <!--    Navigation Drawer-->
    <string name="not_signed_in">Not Signed In</string>
    <string name="profile">Profile</string>
    <string name="wishlist">My Wishlist</string>
    <string name="ads">My Ads</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="add_profile">add profile</string>

    <string name="home_appliances">Home Appliances</string>
    <string name="icon">icon</string>
    <string name="banner_slider">banner slider</string>
    <string name="strip_ad_banner">strip_ad_banner</string>
    <string name="view_all">view all</string>

    <string name="horizontal_scroll_layout_title">Deals In Town!</string>
    <string name="h_s_product_title">Iphone X</string>

    <string name="title_activity_main">Home</string>

    <!--    Safety tab-->
    <string name="report_ad">Report Ad</string>
    <string name="safety_tips">* Do not pay in advance even for the delivery.\n* Try to meet at a safe yet public location.\n* Check the product before buying it.\n* Payment should only be done after product collection.</string>
    <string name="safety_title">SAFETY TIPS</string>

    <!--    Placeholders-->
    <string name="h_s_product_price">Tshs.600,000/=</string>
    <string name="h_s_product_description">SD 234 Processor</string>
    <string name="name_placeholder">John John Doe</string>
    <string name="description_placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="product_title_placeholder">Iphone X Prius 1.8 Z8 CVT</string>
    <string name="money_placeholder">Tshs.1,999,000</string>
    <string name="time_placeholder">30 minutes</string>
    <string name="region_placeholder">Dar Es Salaam</string>
    <string name="email_placeholder">john.j.doe@gmail.com</string>
    <string name="ads_status">Current Ads Status</string>
    <string name="my_address">My Info.</string>
    <string name="phone_number_placeholder">+225709023909</string>
    <string name="sign_out">Sign Out</string>
    <string name="trending">#Trending</string>
    <string name="network_error">Network Error !</string>

</resources>
