<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".startup.auth.ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="176dp"
            android:layout_height="138dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.20" />

        <EditText
            android:id="@+id/forgot_passwrd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints="@string/email_address"
            android:backgroundTint="@color/textHint"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@android:color/transparent"
            android:textColorHint="@color/textHint"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/reset_passwrd_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="#121212"
            android:enabled="false"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/disabledButton"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_passwrd_email"
            app:layout_constraintVertical_bias="0.19999999" />

        <TextView
            android:id="@+id/or_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/or"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_passwrd_btn" />

        <TextView
            android:id="@+id/forgot_passwrd_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or_txt"
            app:layout_constraintVertical_bias="0.32999998" />

        <View
            android:id="@+id/divider"
            android:layout_width="100sp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/or_txt"
            app:layout_constraintEnd_toStartOf="@+id/or_txt" />

        <View
            android:id="@+id/divider2"
            android:layout_width="100sp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/or_txt"
            app:layout_constraintStart_toEndOf="@+id/or_txt" />

        <ProgressBar
            android:id="@+id/reset_passwrd_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/notification_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:text="@string/check_your_email_inbox"
            android:textColor="#4CAF50"
            app:layout_constraintStart_toStartOf="@+id/forgot_passwrd_email"
            app:layout_constraintTop_toBottomOf="@+id/forgot_passwrd_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>