<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/product_card_holder_ad"
                android:layout_width="140dp"
                android:layout_height="110dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clipChildren="true"
                android:clipToPadding="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/product_item_image_ad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="clip_horizontal|clip_vertical"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/banner5"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/product_title_display_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:maxLength="26"
                android:text="@string/product_title_placeholder"
                android:textAlignment="center"
                android:textColor="@color/bluishColor"
                app:layout_constraintStart_toEndOf="@+id/product_card_holder_ad"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_price_display_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:maxLength="18"
                android:text="@string/money_placeholder"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/product_card_holder_ad"
                app:layout_constraintTop_toBottomOf="@+id/product_title_display_ad" />

            <TextView
                android:id="@+id/product_upload_time_display_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/time_placeholder"
                android:textColor="@color/partialBlue"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/product_card_holder_ad"
                app:layout_constraintStart_toEndOf="@+id/product_card_holder_ad"
                app:layout_constraintTop_toBottomOf="@+id/product_price_display_ad" />

            <TextView
                android:id="@+id/product_region_display_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_placeholder"
                android:textColor="@color/greenishColor"
                app:layout_constraintBottom_toBottomOf="@+id/product_card_holder_ad"
                app:layout_constraintEnd_toEndOf="@+id/delete_ad_button"
                app:layout_constraintTop_toBottomOf="@+id/product_price_display_ad" />

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/product_region_display_ad"
                app:layout_constraintEnd_toStartOf="@+id/product_region_display_ad"
                app:srcCompat="@drawable/ic_place_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/delete_ad_button"
                android:layout_width="33dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_delete_black_24dp"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>