<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:elevation="3dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/products_images_viewpager"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:clipToPadding="true"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.viewpager.widget.ViewPager>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/viewpager_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/products_images_viewpager"
                app:tabBackground="@drawable/dot_selector"
                app:tabIndicatorHeight="0dp"
                app:tabRippleColor="@null" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_to_wishlist_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:tint="@color/partialDisabledButton"
                app:backgroundTint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/colorAccent"
                app:srcCompat="@drawable/ic_wishlist_black_24dp"
                tools:ignore="KeyboardInaccessibleWidget" />

            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/product_title_placeholder"
                android:textColor="@color/bluishColor"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewpager_indicator"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/product_upload_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/time_placeholder"
                android:textColor="@color/partialBlue"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/product_title"
                app:layout_constraintTop_toBottomOf="@+id/product_title"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/product_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/region_placeholder"
                android:textColor="@color/greenishColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/product_upload_time"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/map_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/product_map"
                app:layout_constraintEnd_toStartOf="@+id/product_map"
                app:srcCompat="@drawable/ic_place_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/product_price_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/money_placeholder"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/product_upload_time"
                app:layout_constraintTop_toBottomOf="@+id/product_upload_time"
                tools:ignore="HardcodedText" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_price_display" />

            <ImageView
                android:id="@+id/product_owner_call"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/product_price_display"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:srcCompat="@drawable/ic_call_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/product_owner_chat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/product_map"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:srcCompat="@drawable/ic_chat_bubble_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/product_owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name_placeholder"
                android:textColor="@color/partialBlue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="@+id/product_map"
                app:layout_constraintTop_toBottomOf="@+id/product_map" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>